--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Black Demon';
-    src: url('../assets/fonts/horroroid.ttf');
+    src: url('../assets/font/horroroid.ttf');
  }
 
 :root {
